5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1595_842.log
== TEST (2019-03-24 00:00:20) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4
c = b // 4
print(c)

-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 00:00:27) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4
c = b // 4
print(c)

-- EXECUTION TIME:
0.138324
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
0
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:01:14) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:01:28) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:01:42) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:01:43) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:02:00) 
-- CODE:
a = int(input("valor de a :"))
b = a % 4

print (b)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:02:24) 
-- CODE:
a = int(input("valor de a :"))
b = a // 4

print (b)
-- OUTPUT:
2293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 00:03:58) 
-- CODE:
a = int(input("1111"))
b = 1\1\1\1
print(b)
-- ERROR:
File "XXXX", line 2
    b = 1\1\1\1
              ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:10:53) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//100
a3 = a%1000
a4 = a //10
print(a1 + a2 + a3+ a4)
-- OUTPUT:
1190
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:11:50) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//100
a3 = a%1000
a4 = a //10
print(a1)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:12:33) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//100
a3 = a%1000
a4 = a //10
print(a1)
print(a2)
print(a3)
print(a4)
-- OUTPUT:
9
91
173
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:13:02) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//100
a3 = a%1000
a4 = a //10
print(a1)
print(a2)
print(a3)
print(a4)
-- OUTPUT:
9
91
173
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:13:14) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//100
a3 = a%1000
a4 = a //10
print(a1)
print(a2)
print(a3)
print(a4)
-- OUTPUT:
9
91
173
917
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:13:37) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//1000
a3 = a%1000
a4 = a //1000
print(a1)
print(a2)
print(a3)
print(a4)
-- OUTPUT:
9
9
173
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:14:02) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a//1000
a3 = a%1000
a4 = a //1000
print(a1)
print(a2)
print(a3)
print(a4)
-- OUTPUT:
9
9
173
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:18:03) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = a
a3 =
a4 = 
print(a1)
print(a2)
print(a3)
print(a4)
-- ERROR:
File "XXXX", line 4
    a3 =
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:20:53) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10
print(a1)
print(a2)
print(a3)
print(a4)
-- OUTPUT:
9
1
7
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:20) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10
print(a1 + a2 + a3 + a4)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:22:34) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10
print(a1 + a2 + a3 + a4)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:22:56) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10
print(a1 + a2 + a3 + a4)
-- EXECUTION TIME:
0.184977
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:19:13) 
-- CODE:
a = int(input("valor de a:"))
a1 = a//1000
a2 = (a//100)%10
a3 = (a//10)%10
a4 =  a%10
print(a1 + a2 + a3 + a4)
-- EXECUTION TIME:
0.159693
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
